Adding Spock Tests; removing TestNG tests

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
   <artifactId>myapp</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <properties>
+  	<java.version>1.8</java.version>
+  </properties>
+  
   <dependencies>
   	<dependency>
 		<groupId>org.springframework.boot</groupId>
@@ -22,18 +26,51 @@
   	</dependency>
   	
   	<!-- http://mvnrepository.com/artifact/org.testng/testng -->
-	<dependency>
+	<!--  <dependency>
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
 	    <version>6.9.10</version>
 	</dependency>
-
+    -->
 	
     <dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
 		<version>1.16.8</version>
 	</dependency>
+
+	<dependency>
+		<groupId>org.spockframework</groupId>
+		<artifactId>spock-core</artifactId>
+		<scope>test</scope>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.codehaus.groovy</groupId>
+		<artifactId>groovy-all</artifactId>
+	</dependency>
+	
+	<dependency>
+		<groupId>cglib</groupId>
+		<artifactId>cglib-nodep</artifactId>
+		<version>3.1</version>
+		<scope>test</scope>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.objenesis</groupId>
+		<artifactId>objenesis</artifactId>
+		<version>2.1</version>
+		<scope>test</scope>
+	</dependency>
+  	
+  	<!-- http://mvnrepository.com/artifact/org.spockframework/spock-spring -->
+	<dependency>
+	    <groupId>org.spockframework</groupId>
+	    <artifactId>spock-spring</artifactId>
+	    <version>1.0-groovy-2.4</version>
+	</dependency>
+
   	
   </dependencies>
   
@@ -43,10 +80,79 @@
 	  		<groupId>org.springframework.boot</groupId>
 	  		<artifactId>spring-boot-maven-plugin</artifactId>
 	  		<configuration>
+	  			<configuration>
+		            <source>1.8</source>
+		            <target>1.8</target>
+		        </configuration>
 	  			<!--  <profiles>
 	  				<profile>dev</profile>
 	  			</profiles>-->
 	  		</configuration>
+  		</plugin>
+  		
+  		<plugin>
+  			<groupId>org.codehaus.gmavenplus</groupId>
+  			<artifactId>gmavenplus-plugin</artifactId>
+  			<version>1.4</version>
+  			<executions>
+  				<execution>
+  					<goals>
+  						<goal>compile</goal>
+  						<goal>testCompile</goal>
+  					</goals>
+  				</execution>
+  			</executions>
+  		</plugin>
+  		 
+  		<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <executions>
+            <execution>
+                <goals>
+                    <goal>integration-test</goal>
+                    <goal>verify</goal>
+                </goals>
+            </execution>
+        </executions>
+        <configuration>
+            <includes>
+                <include>**/*Spec.java</include>
+  			    <include>**/*Test.java</include>
+            </includes>
+        </configuration>
+    </plugin> 
+  		 <!--  
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-safe-plugin</artifactId>
+  			<version>2.18</version>
+  			<executions>
+  				<execution>
+  					<goals>
+  						<goal>integration-test</goal>
+  						<goal>verify</goal>
+  					</goals>
+  				</execution>
+  			</executions>
+  			<configuration>
+  				<useFile>false</useFile>
+  				<includes>
+  					<include>**/*Spec.java</include>
+  					<include>**/*Test.java</include>
+  				</includes>
+  			</configuration>
+  		</plugin>
+  		-->
+  		<plugin>
+  			<artifactId>maven-surefire-plugin</artifactId>
+  			<configuration>
+  				<useFile>false</useFile>
+  				<includes>
+  					<include>**/*Spec.java</include>
+  					<include>**/*Test.java</include>
+  				</includes>
+  			</configuration>
   		</plugin>
   	</plugins>
   </build>
