--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,18 @@
   	
   	<dependency>
   		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-jdbc</artifactId>
+  	</dependency>
+  	
+  	<dependency>
+  		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-test</artifactId>
   		<scope>test</scope>
+  	</dependency>
+  	
+  	<dependency>
+  		<groupId>com.h2database</groupId>
+  		<artifactId>h2</artifactId>
   	</dependency>
   	
   	<!-- http://mvnrepository.com/artifact/org.testng/testng -->
@@ -68,7 +78,6 @@
 	<dependency>
 	    <groupId>org.spockframework</groupId>
 	    <artifactId>spock-spring</artifactId>
-	    <version>1.0-groovy-2.4</version>
 	</dependency>
 
   	
