--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
   	<java.version>1.8</java.version>
   </properties>
   
+  <repositories>
+  	<repository>
+  		<id>jcenter</id>
+  		<name>JCenter Repo</name>
+  		<url>http://jcenter.bintray.com</url>
+  	</repository>
+  </repositories>
+  
   <dependencies>
   	<dependency>
 		<groupId>org.springframework.boot</groupId>
@@ -35,15 +43,7 @@
   		<artifactId>h2</artifactId>
   	</dependency>
   	
-  	<!-- http://mvnrepository.com/artifact/org.testng/testng -->
-	<!--  <dependency>
-	    <groupId>org.testng</groupId>
-	    <artifactId>testng</artifactId>
-	    <version>6.9.10</version>
-	</dependency>
-    -->
-	
-    <dependency>
+  	<dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
 		<version>1.16.8</version>
@@ -78,6 +78,13 @@
 	<dependency>
 	    <groupId>org.spockframework</groupId>
 	    <artifactId>spock-spring</artifactId>
+	</dependency>
+	
+	<dependency>
+		<groupId>com.athaydes</groupId>
+		<artifactId>spock-reports</artifactId>
+		<version>1.2.7</version>
+		<scope>test</scope>
 	</dependency>
 
   	
@@ -130,7 +137,7 @@
   			    <include>**/*Test.java</include> 
             </includes>
         </configuration>
-    </plugin> 
+        </plugin> 
   		<plugin>
   			<artifactId>maven-surefire-plugin</artifactId>
   			<configuration>
